added contact section with links to resources. Added project details to project overlays with the project image itself linking to github.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,14 @@
   <div class="container">
     <div class="col-md-8 col-md-offset-2 text-center mini-hero">
       <img id="profile" alt="picture of Tchaikousky Thomas II" src="./images/tthomas2.jpg" />
-      <p>I am a upcoming graduate in Software Engineering with extensive coursework and hands on experience in application development. I enjoy building custom technological solutions for both unique and everyday problems alike. </p>
+      <ul class="contact-list">
+        <li>Atlanta, GA</li>
+        <li>Email: tchaikouskythomas@gmail.com</li>
+        <li>LinkedIn: <a href="https://www.linkedin.com/in/tchaikouskythomas">Tchaikousky's LinkedIn Profile</a> </li>
+        <li>GitHub: <a href="https://github.com/tchaikousky">Tchaikousky's GitHub Profile</a></li>
+        <li>Resume: <a href="./assets/tchaikouskythomas2020.pdf">Tchaikousky's Resume</a></li>
+      </ul>
+      <p>I am a upcoming graduate in Software Engineering with extensive coursework and hands on experience in application development. I enjoy building custom technological solutions for both unique and everyday problems alike. I'm always open to meeting new people. So if you are a potential employer, prospective client, or just someone who wants to pick my brain, just click the icons at the bottom of the page to reach me on github or linkedin. You can also contact me via email at tchaikouskythomas@gmail.com.</p>
     </div>
   </div>
 </section>
@@ -85,35 +92,41 @@
 <!-- work section -->
 <section id="works" class="works section no-padding">
   <div class="container-fluid">
+    <h3 class="project-section">Click on a project to see it on Github!</h3>
     <div class="row no-gutter">
-      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="images/pygame.png" class="work-box"> <img src="images/pygame.png" alt="">
+      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="https://github.com/tchaikousky/dodgeball-game" class="work-box"> <img src="images/pygame.png" alt="">
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Dodgeball 2k20</h5>
+            <p>Created with python (pygame)</p>
           </div>
         </div>
         <!-- overlay --> 
         </a> </div>
-      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="images/frontend.png" class="work-box"> <img src="images/frontend.png" alt="">
+      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="https://github.com/tchaikousky/ApiProject" class="work-box"> <img src="images/frontend.png" alt="">
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Fast Food Revenge</h5>
+            <p>Created with HTML, CSS, and JavaScript</p>
           </div>
         </div>
         <!-- overlay --> 
         </a> </div>
-      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="images/whh.png" class="work-box"> <img src="images/whh.png" alt="">
+      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="https://github.com/tchaikousky/whh-game" class="work-box"> <img src="images/whh.png" alt="">
         <div class="overlay">
           <div class="overlay-caption">
             <h5>What's Happening Here?</h5>
+            <p>Created with React.Js, Express.Js, Node.Js, CSS, and PostgreSQL</p>
           </div>
         </div>
         <!-- overlay --> 
         </a> </div>
-      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="images/tims.png" class="work-box"> <img src="images/tims.png" alt="">
+      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="https://github.com/tchaikousky/timsv1" class="work-box"> <img src="images/tims.png" alt="">
         <div class="overlay">
           <div class="overlay-caption">
             <h5>TIMS</h5>
+            <p>Created with React.Js, Express.Js, Node.Js, CSS, and PostgreSQL</p>
+            <!-- <a href= >See on Github!</a> -->
           </div>
         </div>
         <!-- overlay --> 
@@ -144,7 +157,7 @@
 <script src="js/bootstrap.min.js"></script> 
 <script src="js/jquery.flexslider-min.js"></script> 
 <script src="js/jquery.fancybox.pack.js"></script> 
-<script src="js/retina.min.js"></script> 
+<!-- <script src="js/retina.min.js"></script>  -->
 <script src="js/modernizr.js"></script> 
 <script src="js/main.js"></script> 
 <script type="text/javascript" src="js/jquery.contact.js"></script>
